# sidekick

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  shell.nix  sidecar.cabal  sidekick.cabal
.github/workflows/: ci.yml
exe/: Main.hs
fused-effects-pub-sub/Control/Carrier/: Pub.hs  Sub.hs
fused-effects-pub-sub/Control/Carrier/Pub/: Unagi.hs
fused-effects-pub-sub/Control/Carrier/Sub/: Unagi.hs
fused-effects-pub-sub/Control/Effect/: Pub.hs  Sub.hs
lib/: Sidecar.hs  Sidekick.hs
lib/Sidecar/: Ghci.hs
lib/Sidecar/Ghci/: Internal.hs
lib/Sidekick/: FSNotify.hs  Ghci.hs  Options.hs  UI.hs
lib/Sidekick/Ghci/: Internal.hs
nix/: haskell-packages.nix  nixpkgs.nix  override-haskell-packages.nix  pkgs.nix
nix/lib/: override-haskell-packages.nix
nix/overlays/: haskell-packages.nix
sidekick/: Sidekick.hs  default.nix  sidekick-hie.cabal  sidekick.cabal
sidekick-ghci/: README.md  default.nix  sidekick-ghci.cabal
sidekick-ghci-json/: README.md  default.nix  sidekick-ghci-json.cabal
sidekick-ghci-json/src/Sidekick/Ghci/: Json.hs
sidekick-ghci-parsers/: LICENSE  README.md  default.nix  sidekick-ghci-parsers.cabal
sidekick-ghci-parsers/src/Sidekick/Ghci/: Parsers.hs
sidekick-ghci/Sidekick/: Ghci.hs
sidekick-ghci/Sidekick/Ghci/: Internal.hs
sidekick-ghci/src/Sidekick/: Ghci.hs
sidekick-ghci/src/Sidekick/Ghci/: Internal.hs
sidekick-ghci/test/: Main.hs
sidekick-hie/: .gitignore  README.md  sidekick-hie.cabal
sidekick-hie/src/Sidekick/: Hie.hs
sidekick-hie/test/: Example.hs  Main.hs
sidekick/Sidekick/: FSNotify.hs  Options.hs  UI.hs
sidekick/src/: Main.hs  Sidekick.hs
sidekick/src/Sidekick/: Lsp.hs  Options.hs  Parsers.hs  UI.hs  Watch.hs
sidekick/test/: Main.hs
test/: Main.hs
test-sidekick/: Main.hs
test-sidekick-ghci/: Main.hs
