cabal-version: 3.0

name:        sidecar
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidecar
license:     ISC
copyright:   2020 Evan Relf


common common
  build-depends:
    , base   ^>= 4.13.0
    , relude ^>= 0.7.0
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Monad)
  default-language: Haskell2010
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common execuable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


common splint
  build-depends:
    , splint
  ghc-options:
    -fplugin=Splint


library
  import: common, splint
  hs-source-dirs: lib
  build-depends:
    , process
  exposed-modules:
    , Sidecar
    , Sidecar.Ghci


executable sidecar
  import: common, execuable
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends:
    , sidecar


test-suite test
  import: common, execuable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , sidecar
