cabal-version: 3.0

name:        sidecar
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidecar
license:     ISC
copyright:   2020 Evan Relf


common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Monad)
  default-language: Haskell2010
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , NumericUnderscores
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common threaded
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


common optics
  build-depends: optics
  default-extensions:
    , DataKinds
    , DuplicateRecordFields
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedLabels
    , TypeFamilies
    , UndecidableInstances


common streamly
  build-depends: streamly
  ghc-options:
    -O2
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16


common splint
  build-depends: splint
  ghc-options: -fplugin=Splint


library
  import:
    , common
    , optics
    , streamly
    , splint
  hs-source-dirs: lib
  build-depends:
    , async
    , megaparsec
    , optics
    , process
    , random
    , streamly
    , string-interpolate
    , text
  exposed-modules:
    , Sidecar
    , Sidecar.Ghci
    , Sidecar.Ghci.Internal


executable sidecar
  import:
    , common
    , threaded
    , streamly
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends:
    , sidecar


test-suite test
  import:
    , common
    , threaded
    , streamly
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , async
    , hspec
    , sidecar
    , string-interpolate
