cabal-version: 3.0

name:        sidekick
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     ISC
copyright:   2021 Evan Relf


--------------------------------------------------------------------------------
-- Common
--------------------------------------------------------------------------------


common common
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups

common extensions
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , LambdaCase
    , NamedFieldPuns
    , NumericUnderscores
    , OverloadedLabels
    , OverloadedStrings
    , ScopedTypeVariables
    , TypeApplications


common relude
  build-depends: relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude


common threaded-executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


common streamly-optimizations
  ghc-options:
    -O2
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16


--------------------------------------------------------------------------------
-- sidekick
--------------------------------------------------------------------------------


library
  import:
    , common
    , extensions
    , relude
    , streamly-optimizations
  hs-source-dirs: sidekick
  build-depends:
    , brick
    , optics
    , optparse-applicative
    , sidekick-ghci
    , streamly
    , streamly-fsnotify
    , string-interpolate
    , vty
  exposed-modules:
    , Sidekick
    , Sidekick.FSNotify
    , Sidekick.Options
    , Sidekick.UI


executable sidekick
  import:
    , common
    , extensions
    , streamly-optimizations
    , threaded-executable
  build-depends: sidekick
  main-is: sidekick/Main.hs


test-suite test-sidekick
  import:
    , common
    , extensions
    , threaded-executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-sidekick
  build-depends:
    , hspec
    , sidekick


--------------------------------------------------------------------------------
-- sidekick-ghci
--------------------------------------------------------------------------------


library sidekick-ghci
  import:
    , common
    , streamly-optimizations
  visibility: public
  hs-source-dirs: sidekick-ghci
  build-depends:
    , megaparsec
    , random
    , streamly
    , text
    , unliftio
  exposed-modules:
    , Sidekick.Ghci
    , Sidekick.Ghci.Internal


test-suite test-sidekick-ghci
  import:
    , common
    , extensions
    , streamly-optimizations
    , threaded-executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-sidekick-ghci
  build-depends:
    , hspec
    , sidekick-ghci
    , string-interpolate
