cabal-version: 2.2

name:        sidekick-ghci
version:     1.0.0.0
synopsis:    Interact with a live GHCi session
description: Interact with a live GHCi session
category:    Development
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     BSD-3-Clause
copyright:   2021 Evan Relf
tested-with: GHC == 8.10.4

license-file: LICENSE
extra-source-files:
  LICENSE
  README.md


common common
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common streamly
  ghc-options:
    -O2
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16


library
  import: common, streamly
  hs-source-dirs: src
  build-depends:
    , async
    , megaparsec
    , process
    , random
    , stm
    , streamly
    , text
    , unliftio-core
  exposed-modules:
    Sidekick.Ghci
    Sidekick.Ghci.Internal


test-suite test
  import: common, streamly
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , relude
    , sidekick-ghci
    , tasty
    , tasty-hunit
    , unliftio
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
