cabal-version: 2.2

name:        sidekick-ghci
version:     0.1.0.0
synopsis:    Interact with a live GHCi session
description: Interact with a live GHCi session
category:    Development
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     BSD-3-Clause
copyright:   2024 Evan Relf

license-file: LICENSE
extra-source-files:
  LICENSE
  README.md

flag streamly-optimizations
  manual: True

flag fusion-plugin
  default: False
  manual: True

common common
  build-depends: base >= 4.12 && < 5.0
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups

common streamly
  if flag(streamly-optimizations)
    ghc-options:
      -O2
      -fdicts-strict
      -fmax-worker-args=16
      -fspec-constr-recursive=16
  if flag(fusion-plugin)
    build-depends: fusion-plugin
    ghc-options: -fplugin=Fusion.Plugin

library
  import:
    , common
    , streamly
  hs-source-dirs: src
  build-depends:
    , process
    , stm
    , streamly      >= 0.7 && < 0.9
    , text
    , unliftio-core
  exposed-modules:
    Sidekick.Ghci
    Sidekick.Ghci.Internal

test-suite test
  import:
    , common
    , streamly
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , relude
    , sidekick-ghci
    , tasty
    , tasty-hunit
    , unliftio
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
