cabal-version: 2.2

name:        sidekick-hie
version:     0.1.0.0
-- synopsis:
-- description:
category:    Development
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     BSD-3-Clause
copyright:   2024 Evan Relf

license-file: LICENSE
extra-source-files:
  LICENSE
  README.md

common common
  build-depends: base >= 4.12 && < 5.0
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups

library
  import: common
  hs-source-dirs: src
  build-depends:
    , ghc-lib == 9.4.8.20231111
    , text
  exposed-modules:
    Sidekick.Hie
  ghc-options:
    -fwrite-ide-info
    -hiedir .hie

test-suite test
  import: common
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , relude
    , sidekick-hie
    , tasty
    , tasty-hunit
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
