cabal-version: 2.2

name:        sidekick
version:     0.1.0.0
-- synopsis:
-- description:
category:    Development
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     BSD-3-Clause
copyright:   2024 Evan Relf

license-file: LICENSE
extra-source-files:
  LICENSE
  README.md

common common
  build-depends: base >= 4.12 && < 5.0
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , sidekick-ghci
    , sidekick-hie
  exposed-modules:
    Sidekick

executable sidekick
  import:
    , common
    , executable
  build-depends: sidekick
  main-is: src/Main.hs
