cabal-version: 2.2

name:        sidekick
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     BSD-3-Clause
copyright:   2022 Evan Relf

license-file: LICENSE
extra-source-files:
  LICENSE
  README.md


flag streamly-optimizations
  manual: True


flag fusion-plugin
  default: False
  manual: True


common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


common streamly
  if flag(streamly-optimizations)
    ghc-options:
      -O2
      -fdicts-strict
      -fmax-worker-args=16
      -fspec-constr-recursive=16
  if flag(fusion-plugin)
    build-depends: fusion-plugin
    ghc-options: -fplugin=Fusion.Plugin


library
  import:
    , common
    , streamly
  hs-source-dirs: src
  build-depends:
    , ansi-terminal
    , brick
    , optics
    , optparse-applicative
    , sidekick-ghci
    , sidekick-ghci-json
    , sidekick-ghci-parsers
    , streamly
    , streamly-fsnotify
    , string-interpolate
    , text
    , unliftio
    , vty
  exposed-modules:
    Sidekick
    Sidekick.Options
    Sidekick.UI
    Sidekick.Watch


executable sidekick
  import:
    , common
    , executable
    , streamly
  build-depends: sidekick
  main-is: src/Main.hs


test-suite test
  import:
    , common
    , executable
    , streamly
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , relude
    , sidekick
    , tasty
    , tasty-hunit
    , unliftio
