cabal-version: 2.2

name:        sidekick
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/sidekick
license:     BSD-3-Clause
copyright:   2024 Evan Relf

license-file: LICENSE
extra-source-files:
  LICENSE
  README.md


flag streamly-optimizations
  manual: True


flag fusion-plugin
  default: False
  manual: True


common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeOperators
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


common streamly
  if flag(streamly-optimizations)
    ghc-options:
      -O2
      -fdicts-strict
      -fmax-worker-args=16
      -fspec-constr-recursive=16
  if flag(fusion-plugin)
    build-depends: fusion-plugin
    ghc-options: -fplugin=Fusion.Plugin


library
  import:
    , common
    , streamly
  hs-source-dirs: src
  build-depends:
    , aeson
    , co-log-core
    , data-default
    , filepath
    , lsp                   >= 1.5.0.0
    , lsp-types
    , optparse-applicative
    , sidekick-ghci
    , sidekick-ghci-json
    , sidekick-ghci-parsers
    , streamly
    , streamly-fsnotify
    , text
    , unliftio
    , witch
  exposed-modules:
    Sidekick
    Sidekick.Lsp
    Sidekick.Options
    Sidekick.Watch


executable sidekick
  import:
    , common
    , executable
    , streamly
  build-depends: sidekick
  main-is: src/Main.hs
